# PaQt-Man

./: .gitignore  CMakeLists.txt  PaQt-Man.pro  README.md  createExe.bat  main.cpp  qml.qrc
js/: paQtmanJS.js
qml/: Gameplay.qml  Ghost.qml  Interface.qml  Item.qml  Map.qml  Object.qml  Player.qml  WindowLoader.qml  main.qml
server/: README.md  Server.lnk  client.js  index.js  package-lock.json  package.json
server/maps/: README.md  mini.json  oldSchoolStarringJackBlack.json
src/: ApplicationManager.cpp  ApplicationManager.h  DisplayModel.cpp  DisplayModel.h  DisplayObject.cpp  DisplayObject.h  MapModel.cpp  MapModel.h  MapObject.h  main.cpp
